# lexicon

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGES  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  tasks.py  tox.ini
.circleci/: config.yml
docs/: changelog.rst  conf.py  index.rst
lexicon/: __init__.py  alias_dict.py
tests/: alias_dict.py  attribute_dict.py  lexicon_.py
