[project]
name = "lexicon"
version = "2.1.0"
requires-python = ">=3.7"
# That's right, we have NO release dependencies!
dependencies = []

[dependency-groups]
# This group gets special-cased by uv, but the dependency-groups feature is
# part of the generic spec so other tools may also 'see' it.
dev = [
    # Docs (changelog)
    "releases>=2.1,<3",
    "Sphinx>=5.3,<6",
    # Above Sphinx version needs imghdr, removed from stdlib in 3.11ish
    "standard-imghdr==3.13.0",
    # Testing
    "pytest-relaxed>=2",
    # Coverage
    "pytest-cov==2.11.1",
    "codecov==2.1.13",
    # Invoke, invocations for release shenanigans etc
    "invoke>=2",
    "invocations>=3",
    # Release deps
    "wheel==0.36.2",
    # TODO: switch to table format?
    "twine==6.1.0 ; python_version > 3.7",
    "twine==4.0.2 ; python_version == 3.7",
    "readme_renderer>=37.3,<38",
    "setuptools>56",
    # Formatting
    "black==23.3.0",
    # Linting
    "flake8==3.6.0",
    # NOTE: no more "-e ." as in requirements.txt days - most tools, like uv,
    # will automatically install the project itself (in editable mode) when
    # syncing deps.
]
